@@ -115,16 +115,17 @@ find_package(Spuce CONFIG)
 if (NOT Spuce_FOUND)
     message(STATUS "Spuce not found - using built-in Spuce")
 
-    if (NOT EXISTS ${PROJECT_SOURCE_DIR}/spuce/CMakeLists.txt)
-        message(FATAL_ERROR "spuce submodule not configured (git submodule update --init --recursive)")
+    if (EXISTS ${PROJECT_SOURCE_DIR}/spuce/CMakeLists.txt)
+        add_subdirectory(spuce)
+        set(SPUCE_IN_TREE TRUE)
+        set(Spuce_FOUND TRUE)
+        set(Spuce_VERSION "[submodule]")
+        set(Spuce_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/spuce)
+        set(Spuce_LIBRARIES spuce)
+    else ()
+        message(WARNING "spuce submodule not configured (git submodule update --init --recursive)")
     endif ()
 
-    add_subdirectory(spuce)
-    set(SPUCE_IN_TREE TRUE)
-    set(Spuce_FOUND TRUE)
-    set(Spuce_VERSION "[submodule]")
-    set(Spuce_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/spuce)
-    set(Spuce_LIBRARIES spuce)
 endif()
 
 ########################################################################
