@@ -3,6 +3,7 @@ This this the changelog file for the Pothos C++ library.
 Release 0.3.1 (pending)
 ==========================
 
+- Make spuce submodule optional as a dependency
 - CMakeLists.txt use newer git submodule syntax
 - spuce submodule set to 0.4.2 release tag
 
